@@ -214,7 +214,7 @@ sub save {
 }
 
 sub train {
-    my ($self, $input) = @_;
+    my ($self, $input, $fast) = @_;
 
     $self->_storage->start_training();
 
@@ -222,20 +222,24 @@ sub train {
         # With STDIN
         when (not ref and defined and $_ eq '-') {
             die "You must provide STDIN when training from '-'" if $self->_is_interactive(*STDIN);
-            $self->_train_fh(*STDIN);
+            $self->_train_fh(*STDIN, $fast);
         }
         # With a filehandle
         when (ref eq 'GLOB') {
-            $self->_train_fh($input);
+            $self->_train_fh($input, $fast);
         }
         # With a file
         when (not ref) {
             open my $fh, '<:encoding(utf8)', $input;
-            $self->_train_fh($fh, $input);
+            $self->_train_fh($fh, $fast, $input);
         }
         # With an Array
         when (ref eq 'ARRAY') {
-            $self->_learn_one($_) for @$input;
+            for my $line (@$input) {
+                $self->_learn_one($line, $fast);
+                $self->_engine->flush_cache if !$fast;
+            }
+            $self->_engine->flush_cache if $fast;
         }
         # With something naughty
         default {
@@ -249,12 +253,14 @@ sub train {
 }
 
 sub _train_fh {
-    my ($self, $fh, $filename) = @_;
+    my ($self, $fh, $fast) = @_;
 
     while (my $line = <$fh>) {
         chomp $line;
-        $self->_learn_one($line);
+        $self->_learn_one($line, $fast);
+        $self->_engine->flush_cache if !$fast;
     }
+    $self->_engine->flush_cache if $fast;
 
     return;
 }
@@ -288,11 +294,11 @@ sub learn {
 }
 
 sub _learn_one {
-    my ($self, $input) = @_;
+    my ($self, $input, $fast) = @_;
     my $engine  = $self->_engine;
 
     my $tokens = $self->_tokenizer->make_tokens($input);
-    $engine->learn($tokens);
+    $fast ? $engine->learn_cached($tokens) : $engine->learn($tokens);
 
     return;
 }
@@ -546,6 +552,10 @@ Takes a filename, filehandle or array reference and learns from all its
 lines. If a filename is passed, the file is assumed to be UTF-8 encoded.
 Unlike L<C<learn>|/learn>, this method sacrifices some safety (disables
 the database journal, fsyncs, etc) for speed while learning.
+
+You can prove a second parameter which, if true, will use aggressive
+caching while training, which will speed things up considerably for large
+inputs, but will take up quite a bit of memory.
 
 =head2 C<reply>
 
